--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,19 @@ default = []
 std = [
   "arrayvec/std",
   "num/std",
+  "approx/std",
+  "welch-sde",
+  "rand/std",
+  "rand_distr/std",
 ]
 
 [dependencies]
-arrayvec = "0.7.6"
-libm = "0.2.11"
-num = "0.4.3"
+arrayvec = { version = "0.7.6", default-features = false }
+libm = { version = "0.2.11", default-features = false }
+num = { version = "0.4.3" }
+welch-sde = { version = "0.1.0", optional = true }
 
 [dev-dependencies]
-approx = "0.5.1"
+approx = { version = "0.5"}
+rand = { version = "0.9", features = ["alloc"] }
+rand_distr = { version = "0.5", features = ["alloc"] }
