--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,11 @@ std = [
 
 [dependencies]
 arrayvec = { version = "0.7.6", default-features = false }
+find_peaks = "0.1.5"
 libm = { version = "0.2.11", default-features = false }
 num = { version = "0.4.3" }
+polars = { version = "0.46.0", features = ["polars-io"] }
+polars-lazy = { version = "0.46.0", features = ["csv", "diff"] }
 welch-sde = { version = "0.1.0", optional = true }
 
 [dev-dependencies]
