--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,12 @@ std = [
 [dependencies]
 arrayvec = { version = "0.7.6", default-features = false }
 find_peaks = "0.1.5"
+interp = "2.0.2"
 libm = { version = "0.2.11", default-features = false }
 num = { version = "0.4.3" }
 polars = { version = "0.46.0", features = ["polars-io"] }
 polars-lazy = { version = "0.46.0", features = ["csv", "diff"] }
-welch-sde = { version = "0.1.0", optional = true }
+welch-sde = { git = "https://github.com/bgallois/welch-sde.git", branch = "main", optional = true }
 
 [dev-dependencies]
 approx = { version = "0.5"}
