--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cardio-rs"
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Benjamin Gallois <benjamin@gallois.cc>"]
 description = "A Rust library for computing heart rate variability (HRV) metrics from ECG and PPG data."
 homepage = "https://github.com/bgallois/cardio-rs"
@@ -20,7 +20,6 @@ edition = "2024"
 [features]
 default = ["std"]
 std = [
-  "arrayvec/std",
   "num/std",
   "approx/std",
   "rand/std",
@@ -33,9 +32,8 @@ std = [
 ]
 
 [dependencies]
-arrayvec = { version = "0.7.6", default-features = false }
 find_peaks = { version = "0.1.5", optional = true, default-features = false }
-interp = { version = "2.0.2", optional = true }
+interp = { version = "2.0.2", optional = true, default-features = false }
 libm = { version = "0.2.11", default-features = false }
 num = { version = "0.4.3", default-features = false, features = ["libm"] }
 polars = { version = "0.46.0", features = ["polars-io"], optional = true, default-features = false }
