--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,8 @@ rustfft = { version = "6.2.0", optional = true, default-features = false }
 approx = { version = "0.5"}
 rand = { version = "0.9", features = ["alloc"] }
 rand_distr = { version = "0.5", features = ["alloc"] }
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "benchmarks"
+harness = false
